--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,26 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 
+# Add more
+navVer = "2.8.9"
+accPagerVer = "0.12.0"
+kspVer = "2.0.0-1.0.22"
+hiltVer = "2.51.1"
+hiltComposeVer = "1.2.0"
+hiltAndroidCompilerVer = "2.51.1"
+hiltLifecycleViewmodelVer = "1.0.0-alpha03"
+roomVer = "2.6.1"
+runtimeVer = "1.7.8"
+ctsVer = "1.0.1"
+coilVer = "2.4.0"
+firebaseBomVer = "33.1.2"
+firebaseCrashlyticsGradleVer = "3.0.2"
+firebasePrefVer = "1.4.2"
+leakVer = "2.14"
+customCrashVer = "2.4.0"
+gmsVer = "4.4.2"
+viewmodelComposeVer = "2.9.0"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -25,8 +45,41 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+# Add more
+navigation-component = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navVer" }
+accompanist-pager = { group = "com.google.accompanist", name = "accompanist-pager", version.ref = "accPagerVer" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVer" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltComposeVer" }
+hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltAndroidCompilerVer" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltVer" }
+hilt-lifecycle-viewmodel = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodelVer" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomVer" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomVer" }
+room-compiler = { group = "androidx.room", name = "room-compiler",  version.ref = "roomVer" }
+runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "runtimeVer" }
+runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeVer" }
+cts-compose = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "ctsVer" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilVer" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBomVer" }
+firebase-config-ktx = { group = "com.google.firebase", name = "firebase-config-ktx" }
+firebase-crashlytics-ktx = { group = "com.google.firebase", name = "firebase-crashlytics-ktx" }
+firebase-message-ktx = { group = "com.google.firebase", name = "firebase-messaging-ktx" }
+firebase-pref = { group = "com.google.firebase", name = "firebase-perf" }
+leak-cannary-android = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakVer" }
+custom-crash = { group = "cat.ereza", name = "customactivityoncrash", version.ref = "customCrashVer" }
+lifecyle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewmodelComposeVer" }
+lifecyle-viewmodel-savedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "viewmodelComposeVer" }
+lifecyle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "viewmodelComposeVer" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
+#Add more
+ksp = { id = "com.google.devtools.ksp", version.ref = "kspVer" }
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hiltVer" }
+firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlyticsGradleVer" }
+firebase-pref = { id = "com.google.firebase.firebase-perf", version.ref = "firebasePrefVer" }
+google-services = { id = "com.google.gms.google-services", version.ref = "gmsVer" }
